fix layout problem

--- a/index.css
+++ b/index.css
@@ -111,7 +111,7 @@ img{
     height: auto;
     border: 1px solid gold;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 2em;
     
 }
